<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.d4ndcats.easystoryapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_write_post"
        android:name="com.d4ndcats.easystoryapp.ui.post.CreatePostFragment"
        android:label="@string/menu_post"
        tools:layout="@layout/create_post" >
        <action
            android:id="@+id/action_nav_write_post_to_post_title_description"
            app:destination="@id/post_title_description" />
    </fragment>

    <fragment
        android:id="@+id/nav_hashtags"
        android:name="com.d4ndcats.easystoryapp.ui.hashtags.HashtagsFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/hashtags" />
    <fragment
        android:id="@+id/post_title_description"
        android:name="com.d4ndcats.easystoryapp.ui.post.TitlePostCreate"
        android:label="@string/write_post_text"
        tools:layout="@layout/post_title_description" >
        <action
            android:id="@+id/action_post_title_description_to_nav_write_post"
            app:destination="@id/nav_write_post" />
        <action
            android:id="@+id/action_post_title_description_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>